移动端适应

--- a/wanderergathering.css
+++ b/wanderergathering.css
@@ -195,7 +195,7 @@ nav {
 }
 .content {
 	height: 100%;
-	width: 600px;
+	width: 60%;
 	margin: 5px;
 	padding:40px;
 	background: rgba(25 ,25 ,25 ,0.7);
