--- a/wanderergathering.css
+++ b/wanderergathering.css
@@ -166,8 +166,13 @@ nav {
     font-size: 22px;
   }
 }
+.page {
+	width: 1500px;
+	position: relative;
+}
 .blog_info {
 	height:100%;
+	width: 10em;
 	margin:5px 0 5px 80px;
 	padding:10px;
 	background:rgba(25, 25, 25, 0.7);
@@ -195,13 +200,13 @@ nav {
 }
 .content {
 	height: 100%;
-	width: 65%;
-	margin: 5px 150px 5px 0px;
+	width: 54em;
+	margin:5px 0px 10px 18px;
 	padding:40px;
 	background: rgba(25 ,25 ,25 ,0.7);
 	border-radius:8px;
 	color: #d6d6d6;	
-	float:right;
+	float:left;
 	position: relative;
 	text-align: center;
 }
