--- a/default_setting.css
+++ b/default_setting.css
@@ -1,6 +1,10 @@
+html { 
+		min-width: 1210px;
+		overflow:auto;
+		}
 body {
 	height: 100%;
-	weight: 100%;
+	width: 100%;
 }
 * {
 	margin: 0;
@@ -25,4 +29,116 @@ body {
   background: linear-gradient(#00111e 30%, #033d5e);
   overflow: hidden;
   position:fixed;
+}
+@-webkit-keyframes jump {
+  0% {
+    bottom: 0px;
+  }
+  25% {
+    bottom: 5px;
+  }
+  50% {
+    bottom: 0px;
+  }
+  75% {
+    bottom: 3px;
+  }
+  100% {
+    bottom: 0px;
+  }
+}
+@-o-keyframes jump {
+  0% {
+    bottom: 0px;
+  }
+  25% {
+    bottom: 5px;
+  }
+  50% {
+    bottom: 0px;
+  }
+  75% {
+    bottom: 3px;
+  }
+  100% {
+    bottom: 0px;
+  }
+}
+@-moz-keyframes jump {
+  0% {
+    bottom: 0px;
+  }
+  25% {
+    bottom: 5px;
+  }
+  50% {
+    bottom: 0px;
+  }
+  75% {
+    bottom: 3px;
+  }
+  100% {
+    bottom: 0px;
+  }
+}
+@keyframes jump {
+  0% {
+    bottom: 0px;
+  }
+  25% {
+    bottom: 5px;
+  }
+  50% {
+    bottom: 0px;
+  }
+  75% {
+    bottom: 3px;
+  }
+  100% {
+    bottom: 0px;
+  }
+}
+@-webkit-keyframes bigger {
+  0% {
+    font-size: 22px;
+  }
+  50% {
+    font-size: 32px;
+  }
+  100% {
+    font-size: 22px;
+  }
+}
+@-o-keyframes bigger {
+  0% {
+    font-size: 22px;
+  }
+  50% {
+    font-size: 32px;
+  }
+  100% {
+    font-size: 22px;
+  }
+}
+@-moz-keyframes bigger {
+  0% {
+    font-size: 22px;
+  }
+  50% {
+    font-size: 32px;
+  }
+  100% {
+    font-size: 22px;
+  }
+}
+@keyframes bigger {
+  0% {
+    font-size: 22px;
+  }
+  50% {
+    font-size: 32px;
+  }
+  100% {
+    font-size: 22px;
+  }
 }
