--- a/wanderergathering.css
+++ b/wanderergathering.css
@@ -1,19 +1,44 @@
 body {
   background: #282828;
-  position:relative;
 }
 nav {
   width: 100%;
   background: rgba(73, 73, 73, 0.7);
   border-radius:10px;
   position:relative;
+  
+}
+.h {
+  display:block;
+  width: 2.5em;
+  height: 2.5em;
+  margin: 10px 0;
+  float: left;
+  position: relative;
+  color: #333333;
+  text-shadow: 0 3px 10px #e2e2e2, 0 -3px 10px #e2e2e2;
+  font-size: 22px;
+  text-align: center;
+  line-height: 2.5em;
+  border:1px;
+  border-radius: 50%;
+    background: -webkit-radial-gradient(
+    circle at top center,
+    #e5e5e5,
+    #969696,
+    #686868
+  );
+  background: radial-gradient(circle at top center, #e5e5e5, #969696, #686868);
 }
 .h_menu {
-  width:850px;
+  width:700px;
   margin: 0 auto;
   position: relative;
 }
-.h_menu li {
+.h_menu li{
+  float: left;
+}
+.h_menu li a{
   display:block;
   width: 2.5em;
   height: 2.5em;
@@ -39,7 +64,7 @@ nav {
   -webkit-transition: color 0.3s;
   -o-transition: color 0.3s;
 }
-.h_menu li:hover {
+.h:hover, .h_menu li a:hover, .h:focus, .h_menu li a:focus {
   color: #e2e2e2;
   text-shadow: 0 3px 10px #333333, 0 3px 10px #333333;
   -webkit-animation: jump 0.5s;
@@ -47,133 +72,30 @@ nav {
   -moz-animation: jump 0.5s;
   animation: jump 0.5s;
 }
-@-webkit-keyframes jump {
-  0% {
-    bottom: 0px;
-  }
-  25% {
-    bottom: 5px;
-  }
-  50% {
-    bottom: 0px;
-  }
-  75% {
-    bottom: 3px;
-  }
-  100% {
-    bottom: 0px;
-  }
-}
-@-o-keyframes jump {
-  0% {
-    bottom: 0px;
-  }
-  25% {
-    bottom: 5px;
-  }
-  50% {
-    bottom: 0px;
-  }
-  75% {
-    bottom: 3px;
-  }
-  100% {
-    bottom: 0px;
-  }
-}
-@-moz-keyframes jump {
-  0% {
-    bottom: 0px;
-  }
-  25% {
-    bottom: 5px;
-  }
-  50% {
-    bottom: 0px;
-  }
-  75% {
-    bottom: 3px;
-  }
-  100% {
-    bottom: 0px;
-  }
-}
-@keyframes jump {
-  0% {
-    bottom: 0px;
-  }
-  25% {
-    bottom: 5px;
-  }
-  50% {
-    bottom: 0px;
-  }
-  75% {
-    bottom: 3px;
-  }
-  100% {
-    bottom: 0px;
-  }
-}
-
-.h_menu li:active {
+.h_menu li a:active {
    animation: bigger 0.4s;
   -webkit-animation: bigger 0.4s;
   -o-animation: bigger 0.4s;
   -moz-animation: bigger 0.4s;
 }
-@-webkit-keyframes bigger {
-  0% {
-    font-size: 22px;
-  }
-  50% {
-    font-size: 32px;
-  }
-  100% {
-    font-size: 22px;
-  }
+#a_nav {
+	display: none;
 }
-@-o-keyframes bigger {
-  0% {
-    font-size: 22px;
-  }
-  50% {
-    font-size: 32px;
-  }
-  100% {
-    font-size: 22px;
-  }
+#h_nav:target ul{
+	display: none;
 }
-@-moz-keyframes bigger {
-  0% {
-    font-size: 22px;
-  }
-  50% {
-    font-size: 32px;
-  }
-  100% {
-    font-size: 22px;
-  }
+#h_nav:target {
+	background: transparent;
 }
-@keyframes bigger {
-  0% {
-    font-size: 22px;
-  }
-  50% {
-    font-size: 32px;
-  }
-  100% {
-    font-size: 22px;
-  }
+#h_nav:target #a_nav {
+	display: block;
 }
-.page {
-	width: 1500px;
-	position: relative;
+#h_nav:target #n_nav {
+	display:none;
 }
 .blog_info {
 	height:100%;
-	width: 10em;
-	margin:5px 0 5px 80px;
+	margin:5px 20px 5px 80px;
 	padding:10px;
 	background:rgba(25, 25, 25, 0.7);
 	border-radius:8px;
@@ -200,8 +122,8 @@ nav {
 }
 .content {
 	height: 100%;
-	width: 54em;
-	margin:5px 0px 10px 18px;
+	width: 60%;
+	margin: 5px;
 	padding:40px;
 	background: rgba(25 ,25 ,25 ,0.7);
 	border-radius:8px;
@@ -212,4 +134,5 @@ nav {
 }
 .title {
 	font-size: 38px;
+
 }
